# tg_screenshot_url

./: .gitignore  LICENSE  README.md  docker-compose.yml  example.env
tg_screenshot/: Dockerfile  load  main.py  pyproject.toml
tg_screenshot/tg_screenshot/: __init__.py  commands.py  config.py  logger.py  sender.py  shemas.py  text.py
worker_screenshot/: Dockerfile  main.py  pyproject.toml
worker_screenshot/migration/: env.py
worker_screenshot/migration/versions/: 470497b74ac7_initial.py  bc6c6c27cd60_initial.py
worker_screenshot/worker/: __init__.py  config.py  dependencies.py  logger.py  screenshot.py  worker.py
worker_screenshot/worker/db/: __init__.py  models.py  repository.py
worker_screenshot/worker/minio/: __init__.py  file_storage.py
worker_screenshot/worker/schemas/: __init__.py  request.py
